<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lhead"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:id="@+id/driver_list_rl_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/app_color" >

            <ImageView
                android:id="@+id/driver_list_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/driver_list_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/driver_list_iv_back"
                android:paddingLeft="10dp"
                android:text="PRODUCTION Details"
                android:textColor="#fff"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_toRightOf="@+id/driver_list_tv_title"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/vt">

                <TextView
                    android:id="@+id/dds"
                    android:layout_width="45dp"
                    android:gravity="right"
                    android:layout_height="48dp"

                    android:layout_gravity="right"
                    android:visibility="invisible"

                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <View
                android:id="@+id/vt"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="3dp"
                android:visibility="invisible"
                android:layout_toLeftOf="@+id/driver_list_tv_add_report"
                android:background="@color/white" />

            <TextView
                android:id="@+id/driver_list_tv_add_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:visibility="invisible"
                android:padding="4dp"
                android:text="ADD SERVICE\n TICKET"
                android:textColor="#fff"
                android:textSize="10sp" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp"
            android:background="@drawable/my_custom_background_new"

            >


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_margin="1dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_userz"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edtheight"
                android:layout_weight="1"
                android:background="@mipmap/field"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:hint="@string/enter_runno"
                android:textColor="#000"
                android:textSize="14sp" />
            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/search"

                app:backgroundTint="@null"
                android:background="@drawable/btn_g"
                />
            </LinearLayout>

            <LinearLayout
android:id="@+id/linshowall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_showall"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/showall"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:backgroundTint="@null"
                    android:background="@drawable/btn_g"
                    />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lin_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:layout_margin="5dp"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/driver_list_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"

                >
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>




    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/rz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"

            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250px"
                android:layout_height="160px"
                android:src="@drawable/nlogo"></ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="SOFTWARE - MOBILE APPLICATIONS - WEB"
                android:gravity="center"></TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="(855) 922-9700"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="WWW.I-SOFT.US"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center"></TextView>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>